~char popup overflow fix for long names

--- a/react/src/Components/AnimePage/PopupCard.module.scss
+++ b/react/src/Components/AnimePage/PopupCard.module.scss
@@ -18,7 +18,7 @@
   padding: 1rem;
   
   .mainImage {
-    height: 254px;
+    height: calc(var(--height) - 2rem - 4px);
     aspect-ratio: 225 / 350;
   }
   
@@ -53,19 +53,21 @@
   }
 
   .titleAndDesc {
-    max-height: calc(290px - 2rem - 4px);
-
+    height: calc(var(--height) - 2rem);
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 13;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  
     .name {
       font-size: 1.25rem;
-      margin-bottom: 0.125rem;
+      margin-bottom: 0.25rem;
+      line-height: 1.1;
     }
 
     .desc {
-      overflow: hidden;
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 12;
-      text-overflow: ellipsis;
+      display: contents;
     }
   }
 
@@ -73,7 +75,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-height: 100%;
+    max-height: calc(var(--height) - 2rem - 4px);
 
     img {
       margin-top: 1px;
